[package]
name = "sub-cache"
description = """
A distributed cache implementation that:
- Maintains a local view of data stored in the remote data store
- Automatically synchronizes with the data source via a subscribe API
- Provides safe concurrent access with two-level locking
- Handles connection failures with automatic recovery
- Ensures data consistency through sequence number tracking
"""
version = "0.2.0"
authors = ["Databend Authors <opensource@datafuselabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"


[dependencies]
async-trait = "0.1.88"
futures = "0.3.24"
log = "0.4.27"
thiserror = "1"
tokio = { version = "1.35.0", features = ["sync", "time", "rt"] }
tokio-stream = "0.1"



[dev-dependencies]
anyhow = "1"
pretty_assertions = "1"
tokio = { version = "1.35.0", features = ["macros", "rt-multi-thread"] }

